<?xml version="1.0"?>
<package format="2">
  <name>laserscan_aggregator</name>
  <version>0.0.0</version>
  <description>The laserscan_aggregator package</description>

  <maintainer email="ragesh.ramachandran@ipa.fraunhofer.de">Ragesh</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
</package>
